--- a/Alco/src/pages/home/home.html
+++ b/Alco/src/pages/home/home.html
@@ -1,18 +1,25 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+
+
+
+
+<ion-header style="background-color:lightblue;">
+  <img src="assets/imgs/alcometer.png" style="padding-top:20%;">
 </ion-header>
+<h1 style="position:absolute;left:40%; top:35%;">Login</h1>
+<ion-list style="position:absolute; top:45%; left:20%;">
+    <ion-item>
+      <ion-label floating>Username</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+    <button style="position:absolute; top:110%; background-color:lightblue;" ion-button>Sign in</button>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  </ion-list>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <img src="assets/imgs/google.png" style="margin-top:145%; margin-left:20%; width:191.5px;height:46px;">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+
