Login laytout finished

--- a/Alco/src/pages/home/home.html
+++ b/Alco/src/pages/home/home.html
@@ -16,10 +16,12 @@
       <ion-label floating>Password</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
-    <button style="position:absolute; top:110%; background-color:lightblue;" ion-button>Sign in</button>
+    <ion-label><a href="#" style="font-size:10px;margin-left:7%">Forgot password?</a></ion-label>
+    <button style="position:absolute; top:100%; background-color:lightblue; width:100%" ion-button>Sign in</button>
 
   </ion-list>
 
-  <img src="assets/imgs/google.png" style="margin-top:145%; margin-left:20%; width:191.5px;height:46px;">
+  <img src="assets/imgs/google.png" style="margin-top:145%;margin-left:20%; width:220px;height:46px;">
+  <button style="background-color:lightblue; margin-left:20.5%; width:216px;" ion-button>Create account</button>
 
 
