create new user (zonder extra info) werkt

--- a/Alco/src/pages/database-testing/database-testing.html
+++ b/Alco/src/pages/database-testing/database-testing.html
@@ -57,6 +57,10 @@
     <button ion-button block type="submit" [disabled]="!loginForm.valid">
       Log In
     </button>
+
+    <button ion-button block clear (click)="goToSignup()">
+      Create a new account
+    </button>
   </form>
 
 
