--- a/Alco/src/pages/home/home.html
+++ b/Alco/src/pages/home/home.html
@@ -15,4 +15,7 @@
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button block clear (click)="logOut()">
+    Log Out
+  </button>
 </ion-content>
