password reset email works, no error handling or format checking for anything yet

--- a/Alco/src/pages/database-testing/database-testing.html
+++ b/Alco/src/pages/database-testing/database-testing.html
@@ -61,6 +61,10 @@
     <button ion-button block clear (click)="goToSignup()">
       Create a new account
     </button>
+
+    <button ion-button block clear (click)="forgotPassword()">
+      Forgot password
+    </button>
   </form>
 
 
