--- a/Alco/src/pages/sign-up/sign-up.html
+++ b/Alco/src/pages/sign-up/sign-up.html
@@ -28,4 +28,17 @@
       Create a new Account
     </button>
   </form>
+  <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
+
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input formControlName="email" type="email" placeholder="Your email address">
+      </ion-input>
+    </ion-item>
+
+    <button ion-button block type="submit" [disabled]="!resetPasswordForm.valid">
+      Reset your Password
+    </button>
+
+  </form>
 </ion-content>
