--- a/Alco/src/pages/test-home/test-home.html
+++ b/Alco/src/pages/test-home/test-home.html
@@ -13,6 +13,8 @@
 </ion-header>
 
 
+
 <ion-content padding>
+    <button ion-button type="submit" (click)="logout()">Log out</button>
 
 </ion-content>
