Create account works properly

--- a/Alco/src/pages/create-account/create-account.html
+++ b/Alco/src/pages/create-account/create-account.html
@@ -27,7 +27,7 @@
     <ion-label>Country</ion-label>
     <ion-select formControlName="country">
       <ion-option value="België">België</ion-option>
-      <ion-option value="Suomo">Suomi</ion-option>
+      <ion-option value="Suomi">Suomi</ion-option>
       <ion-option value="Deutschland">Deutschland</ion-option>
       <ion-option value="Nederland">Nederland</ion-option>
       <ion-option value="France">France</ion-option>
